--- a/beacon-chain/core/electra/BUILD.bazel
+++ b/beacon-chain/core/electra/BUILD.bazel
@@ -22,6 +22,7 @@ go_library(
         "//beacon-chain/core/helpers:go_default_library",
         "//beacon-chain/core/signing:go_default_library",
         "//beacon-chain/core/time:go_default_library",
+        "//beacon-chain/core/validators:go_default_library",
         "//beacon-chain/state:go_default_library",
         "//beacon-chain/state/state-native:go_default_library",
         "//config/params:go_default_library",
@@ -43,6 +44,7 @@ go_test(
         "churn_test.go",
         "consolidations_test.go",
         "deposits_test.go",
+        "registry_updates_test.go",
         "upgrade_test.go",
         "validator_test.go",
     ],
